--- a/index.html
+++ b/index.html
@@ -27,7 +27,8 @@
     <div class="container" id="top">
         <nav class="navbar navbar-light bg-light navbar-expand-lg">
             <a class="navbar-brand" href="index.html">
-                <img src="/sap/img/logo.jpg" width="40" height="40" class="d-inline-block align-top rounded-circle" alt="logo">
+                <img src="/sap/img/logo.jpg" width="40" height="40" class="d-inline-block align-top rounded-circle"
+                    alt="logo">
                 Gourav soni
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -41,7 +42,7 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/sap/class.html">Classes</a>
-                    <!-- <li class="nav-item">
+                        <!-- <li class="nav-item">
                         <a class="nav-link" href="#">Pricing</a>
                     </li> -->
                 </ul>
@@ -51,10 +52,30 @@
         <img src="img/main.jpg" class="mainPic fluid" alt="School building">
         <div class="top-left">(SAP) Government boys senior secondary school</div>
 
+        <!-- cards -->
+        <div class="row container card-group">
+            <div class="card" style="width: 18rem;">
+                <img src="img/child.jpg" class="card-img-top" alt="...">
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="img/child2.jpg" class="card-img-top" alt="...">
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="img/child3.jpg" class="card-img-top" alt="...">
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="img/child4.jpg" class="card-img-top" alt="...">
+            </div>
+            <div class="card" style="width: 18rem;">
+                <img src="img/child5.jpg" class="card-img-top" alt="...">
+            </div>
+        </div>
     </div>
     <div id="upArrow" class="right-corner">
         <a href="#top"><i class="fas fa-arrow-circle-up"></i></a>
     </div>
+
+
 </body>
 
 </html>
