--- a/class.html
+++ b/class.html
@@ -20,7 +20,8 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
-    <title>SAP-Classes</title>
+    <link rel="shortcut icon" href="img/faviconn.png" alt="favicon">
+    <title>SAP- Classes</title>
 </head>
 
 <body>
@@ -43,9 +44,9 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="">Classes</a>
-                        <!-- <li class="nav-item">
-                        <a class="nav-link" href="#">Pricing</a>
-                    </li> -->
+                    <li class="nav-item">
+                        <a class="nav-link" href="/sap/about.html">About</a>
+                    </li>
                 </ul>
             </div>
         </nav>
@@ -55,8 +56,8 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Class 12<sup>th</sup></h5>
-                        <a href="#" class="btn btn-primary">Syllabus</a>
                         <a href="#" class="btn btn-primary">Exam</a>
+                        <a href="#" class="btn btn-primary">Tour</a>
                     </div>
                 </div>
             </div>
@@ -64,8 +65,8 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Class 11<sup>th</sup></h5>
-                        <a href="#11math" class="btn btn-primary">Syllabus</a>
                         <a href="#" class="btn btn-primary">Exam</a>
+                        <a href="#tour11" class="btn btn-primary">Tour</a>
                     </div>
                 </div>
             </div>
@@ -73,8 +74,8 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Class 10<sup>th</sup></h5>
-                        <a href="#" class="btn btn-primary">Syllabus</a>
                         <a href="#" class="btn btn-primary">Exam</a>
+                        <a href="#" class="btn btn-primary">Tour</a>
                     </div>
                 </div>
             </div>
@@ -82,72 +83,105 @@
                 <div class="card">
                     <div class="card-body">
                         <h5 class="card-title">Class 9<sup>th</sup></h5>
-                        <a href="#" class="btn btn-primary">Syllabus</a>
                         <a href="#" class="btn btn-primary">Exam</a>
+                        <a href="#" class="btn btn-primary">Tour</a>
                     </div>
                 </div>
             </div>
         </div>
-
-        <!-- table of class 11th -->
-        <h3 id="11math">Math (class 11)</h3>
-        <table class="table">
-            <thead>
-                <tr>
-                    <th scope="col">Units</th>
-                    <th scope="col">No. of Periods</th>
-                    <th scope="col">Marks</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <th scope="row">I. Sets and Functions</th>
-                    <td>60</td>
-                    <td>23</td>
-                </tr>
-                <tr>
-                    <th scope="row">II. Algebra</th>
-                    <td>70</td>
-                    <td>30</td>
-                </tr>
-                <tr>
-                    <th scope="row">III. Coordinate Geometry</th>
-                    <td>40</td>
-                    <td>10</td>
-
-                </tr>
-                <tr>
-                    <th scope="row">IV. Calculus</th>
-                    <td>30</td>
-                    <td>05</td>
-
-                </tr>
-                <tr>
-                    <th scope="row">V. Mathematical Reasoning</th>
-                    <td>10</td>
-                    <td>02</td>
-
-                </tr>
-                <tr>
-                    <th scope="row">VI. Statistics and Probability</th>
-                    <td>30</td>
-                    <td>10</td>
-
-                </tr>
-                <tr>
-                    <th scope="row">Total</th>
-                    <td class="font-weight-bold">240</td>
-                    <td class="font-weight-bold">80</td>
-
-                </tr>
-                <tr>
-                    <th scope="row">Internal Assessment</th>
-                    <td></td>
-                    <td>20</td>
-
-                </tr>
-            </tbody>
-        </table>
+        <!-- cards -->
+        <div class="row my-4" id="tour11">
+            <div class="col-sm-4 py-3">
+                <div class="card">
+                    <img src="img/zero1.jpeg" class="card-img-top" alt="...">
+                    <!-- <div class="card-body">
+                        <h5 class="card-title">Special title treatment</h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.
+                        </p>
+                    </div> -->
+                </div>
+            </div>
+            <div class="col-sm-4 py-3">
+                <div class="card">
+                    <img src="img/zero.jpeg" class="card-img-top" alt="...">
+                    <!-- <div class="card-body">
+                        <h5 class="card-title">Special title treatment</h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.
+                        </p>
+                    </div> -->
+                </div>
+            </div>
+            <div class="col-sm-4 py-3">
+                <div class="card">
+                    <img src="img/one.jpeg" class="card-img-top" alt="...">
+                    <!-- <div class="card-body">
+                        <h5 class="card-title">Special title treatment</h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.
+                        </p>
+                    </div> -->
+                </div>
+            </div>
+            <div class="col-sm-4 py-3">
+                <div class="card">
+                    <img src="img/two.jpeg" class="card-img-top" alt="...">
+                    <!-- <div class="card-body">
+                        <h5 class="card-title">Special title treatment</h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.
+                        </p>
+                    </div> -->
+                </div>
+            </div>
+            <div class="col-sm-4 py-3">
+                <div class="card">
+                    <img src="img/three.jpeg" class="card-img-top" alt="...">
+                    <!-- <div class="card-body">
+                        <h5 class="card-title">Special title treatment</h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.
+                        </p>
+                    </div> -->
+                </div>
+            </div>
+            <div class="col-sm-4 py-3">
+                <div class="card">
+                    <img src="img/four.jpeg" class="card-img-top" alt="...">
+                    <!-- <div class="card-body">
+                        <h5 class="card-title">Special title treatment</h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.
+                        </p>
+                    </div> -->
+                </div>
+            </div>
+            <div class="col-sm-4 py-3">
+                <div class="card">
+                    <img src="img/five.jpeg" class="card-img-top" alt="...">
+                    <!-- <div class="card-body">
+                        <h5 class="card-title">Special title treatment</h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.
+                        </p>
+                    </div> -->
+                </div>
+            </div>
+            <div class="col-sm-4 py-3">
+                <div class="card">
+                    <img src="img/seven.jpeg" class="card-img-top" alt="...">
+                    <!-- <div class="card-body">
+                        <h5 class="card-title">Special title treatment</h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.
+                        </p>
+                    </div> -->
+                </div>
+            </div>
+            <div class="col-sm-4 py-3">
+                <div class="card">
+                    <img src="img/eight.jpeg" class="card-img-top" alt="...">
+                    <!-- <div class="card-body">
+                        <h5 class="card-title">Special title treatment</h5>
+                        <p class="card-text">With supporting text below as a natural lead-in to additional content.
+                        </p>
+                    </div> -->
+                </div>
+            </div>
+        </div>
     </div>
     <div id="upArrow" class="right-corner">
         <a href="#top"><i class="fas fa-arrow-circle-up"></i></a>
