--- a/index.html
+++ b/index.html
@@ -21,12 +21,11 @@
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
     </script>
     <link rel="shortcut icon" href="img/faviconn.png" alt="favicon">
-    <title>SAP- Classes</title>
+    <title>SAP- Saheed Anushuya prashad</title>
 </head>
 
 <body>
     <div class="container" id="top">
-        <!-- nav section -->
         <nav class="navbar navbar-light bg-light navbar-expand-lg">
             <a class="navbar-brand" href="index.html">
                 <img src="/sap/img/logo.jpg" width="40" height="40" class="d-inline-block align-top rounded-circle"
@@ -43,57 +42,23 @@
                         <a class="nav-link" href="index.html">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="">Classes</a>
+                        <a class="nav-link" href="/sap/class.html">Classes</a>
+                    </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/sap/about.html">About</a>
                     </li>
                 </ul>
             </div>
         </nav>
-        <!-- content -->
-        <div class="row">
-            <div class="col-sm-6 py-2">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Class 12<sup>th</sup></h5>
-                        <a href="#" class="btn btn-primary">Exam</a>
-                        <a href="#" class="btn btn-primary">Tour</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6 py-2">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Class 11<sup>th</sup></h5>
-                        <a href="#" class="btn btn-primary">Exam</a>
-                        <a href="#tour11" class="btn btn-primary">Tour</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6 py-2">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Class 10<sup>th</sup></h5>
-                        <a href="#" class="btn btn-primary">Exam</a>
-                        <a href="#" class="btn btn-primary">Tour</a>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-6 py-2">
-                <div class="card">
-                    <div class="card-body">
-                        <h5 class="card-title">Class 9<sup>th</sup></h5>
-                        <a href="#" class="btn btn-primary">Exam</a>
-                        <a href="#" class="btn btn-primary">Tour</a>
-                    </div>
-                </div>
-            </div>
-        </div>
+
+        <img src="img/main.jpg" class="mainPic fluid" alt="School building">
+        <div class="top-left">(SAP) Government boys senior secondary school</div>
+
         <!-- cards -->
-        <div class="row my-4" id="tour11">
+        <div class="row my-4">
             <div class="col-sm-4 py-3">
                 <div class="card">
-                    <img src="img/zero1.jpeg" class="card-img-top" alt="...">
+                    <img src="img/child.jpg" class="card-img-top" alt="...">
                     <!-- <div class="card-body">
                         <h5 class="card-title">Special title treatment</h5>
                         <p class="card-text">With supporting text below as a natural lead-in to additional content.
@@ -103,7 +68,7 @@
             </div>
             <div class="col-sm-4 py-3">
                 <div class="card">
-                    <img src="img/zero.jpeg" class="card-img-top" alt="...">
+                    <img src="img/child2.jpg" class="card-img-top" alt="...">
                     <!-- <div class="card-body">
                         <h5 class="card-title">Special title treatment</h5>
                         <p class="card-text">With supporting text below as a natural lead-in to additional content.
@@ -113,7 +78,7 @@
             </div>
             <div class="col-sm-4 py-3">
                 <div class="card">
-                    <img src="img/one.jpeg" class="card-img-top" alt="...">
+                    <img src="img/child4.jpg" class="card-img-top" alt="...">
                     <!-- <div class="card-body">
                         <h5 class="card-title">Special title treatment</h5>
                         <p class="card-text">With supporting text below as a natural lead-in to additional content.
@@ -123,7 +88,7 @@
             </div>
             <div class="col-sm-4 py-3">
                 <div class="card">
-                    <img src="img/two.jpeg" class="card-img-top" alt="...">
+                    <img src="img/child5.jpg" class="card-img-top" alt="...">
                     <!-- <div class="card-body">
                         <h5 class="card-title">Special title treatment</h5>
                         <p class="card-text">With supporting text below as a natural lead-in to additional content.
@@ -133,47 +98,7 @@
             </div>
             <div class="col-sm-4 py-3">
                 <div class="card">
-                    <img src="img/three.jpeg" class="card-img-top" alt="...">
-                    <!-- <div class="card-body">
-                        <h5 class="card-title">Special title treatment</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.
-                        </p>
-                    </div> -->
-                </div>
-            </div>
-            <div class="col-sm-4 py-3">
-                <div class="card">
-                    <img src="img/four.jpeg" class="card-img-top" alt="...">
-                    <!-- <div class="card-body">
-                        <h5 class="card-title">Special title treatment</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.
-                        </p>
-                    </div> -->
-                </div>
-            </div>
-            <div class="col-sm-4 py-3">
-                <div class="card">
-                    <img src="img/five.jpeg" class="card-img-top" alt="...">
-                    <!-- <div class="card-body">
-                        <h5 class="card-title">Special title treatment</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.
-                        </p>
-                    </div> -->
-                </div>
-            </div>
-            <div class="col-sm-4 py-3">
-                <div class="card">
-                    <img src="img/seven.jpeg" class="card-img-top" alt="...">
-                    <!-- <div class="card-body">
-                        <h5 class="card-title">Special title treatment</h5>
-                        <p class="card-text">With supporting text below as a natural lead-in to additional content.
-                        </p>
-                    </div> -->
-                </div>
-            </div>
-            <div class="col-sm-4 py-3">
-                <div class="card">
-                    <img src="img/eight.jpeg" class="card-img-top" alt="...">
+                    <img src="img/child3.jpg" class="card-img-top" alt="...">
                     <!-- <div class="card-body">
                         <h5 class="card-title">Special title treatment</h5>
                         <p class="card-text">With supporting text below as a natural lead-in to additional content.
