--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div class="navbar row fixed-bottom container-fluid navbar-light bg-light text-center">
         <div class="nav-item col-4">
             <a href="index.html"><i class="material-icons" id="fst"
-                    style="font-size:40px; border-radius: 50%">ac_unit</i></a>
+                    style="font-size:40px; border-radius: 50%; color: rgb(207, 58, 200)">ac_unit</i></a>
         </div>
         <div class="nav-item col-4">
             <a href="/sap/class.html"><i class="material-icons" id="snd"
