--- a/class.html
+++ b/class.html
@@ -45,7 +45,7 @@
         </div>
         <div class="nav-item col-4">
             <a href="/sap/class.html"><i class="material-icons" id="snd"
-                    style="font-size:40px; border-radius: 50%">home_work</i></a>
+                    style="font-size:40px; border-radius: 50%; color: rgb(207, 58, 200)">home_work</i></a>
         </div>
         <div class="nav-item col-4">
             <a href="/sap/about.html"><i class="material-icons" id="trd"
