--- a/about.html
+++ b/about.html
@@ -49,7 +49,7 @@
         </div>
         <div class="nav-item col-4">
             <a href="/sap/about.html"><i class="material-icons" id="trd"
-                    style="font-size:40px; border-radius:50%; color: rgb(207, 58, 200)">info</i></a>
+                    style="font-size:40px; border-radius:50%; color: color: rgb(207, 58, 200)">info</i></a>
         </div>
     </div>
 
