--- a/index.html
+++ b/index.html
@@ -62,6 +62,10 @@
         <img src="img/main.jpg" class="mainPic fluid" alt="School building">
         <div class="top-left">(SAP) Government boys senior secondary school</div>
 
+        <br><br>
+        <hr>
+        <h2 class="card-title text-center">Memories</h2>
+        <hr>
         <!-- cards -->
         <div class="row my-4">
             <div class="col-sm-4 py-3">
