--- a/about.html
+++ b/about.html
@@ -41,15 +41,15 @@
     <div class="navbar row fixed-bottom container-fluid navbar-light bg-light text-center">
         <div class="nav-item col-4">
             <a href="index.html"><i class="material-icons" id="fst"
-                    style="font-size:40px; border-radius: 50%">ac_unit</i></a>
+                    style="font-size:40px; border-radius: 50%">ac_unit</i><small>Home</small></a>
         </div>
         <div class="nav-item col-4">
             <a href="/sap/class.html"><i class="material-icons" id="snd"
-                    style="font-size:40px; border-radius: 50%">home_work</i></a>
+                    style="font-size:40px; border-radius: 50%">home_work</i><small>Class</small></a>
         </div>
         <div class="nav-item col-4">
             <a href="/sap/about.html"><i class="material-icons" id="trd"
-                    style="font-size:40px; border-radius:50%; color: color: rgb(207, 58, 200)">info</i></a>
+                    style="font-size:40px; border-radius:50%; color: color: rgb(207, 58, 200)">info</i><small>About</small></a>
         </div>
     </div>
 
